# django-base

./: Makefile  README.md  env.example  passenger_wsgi.py  pyproject.toml  requirements.txt
apps/index/: admin.py  models.py  urls.py  views.py
apps/index/migrations/: 0001_initial.py
apps/index/templates/index/: index.html
core/: admin.py  urls.py
core/context_processors/: __init__.py
core/management/commands/: fill_ru_from_main_fields.py  fill_translations_from_phrases.py
core/middlewares/: add_contenttype_options.py  admin_language.py  cache_control.py  force_samesite_none.py  healthcheck.py  last_modified.py  permissions_policy.py  referrer_policy.py  request_id.py  request_log_middleware.py  user_agent_validation.py
core/models/: querysets.py
core/models/mixins/: audit.py  changetracking.py  meta.py  orderable.py  ownership.py  publish_window.py  publishable.py  slug.py  soft_delete.py  timestamp.py  uuid.py
core/settings/: base.py  dashboard.py  development.py  production.py
core/settings/components/admin_tools/: auditlog.py  constance.py  django_extensions.py  dynamic_preferences.py  health_check.py  log_viewer.py  reversion.py  silk.py
core/settings/components/analytics/: dj_tracker.py  django_request.py  insights.py  silent_mammoth_whistle.py  slick_reporting.py
core/settings/components/api/: rest_framework.py  swagger.py
core/settings/components/assets/: cdn.py  compression.py
core/settings/components/authentication/: account_old.py  axes.py  defender.py  django-authority .py  djoser.py  guardian.py  oauth2_toolkit.py  simple_jwt.py  socialaccount.py
core/settings/components/communication/: email.py  push_notifications.py  sms.py  webhooks.py
core/settings/components/custom_admin/: grappelli.py  jazzmin.py  simple_ui.py  unfold.py
core/settings/components/custom_models/: django_fernet_encrypted_fields.py  django_model_utils.py  django_mptt.py
core/settings/components/database/: mssql.py  mysql.py  oracle.py  postgresql.py  sqlite.py
core/settings/components/design/: sorl_thumbnail.py
core/settings/components/development/: compressor.py  debug_toolbar.py  extensions.py  logging.py  silk.py
core/settings/components/editors/: ckeditor.py  ckeditor5.py  summernote.py  tinymce.py
core/settings/components/fields/: django_sortedm2m.py
core/settings/components/file_managers/: filebrowser.py  filer.py
core/settings/components/forms/: crispy_forms.py  floppy_forms.py  smart_selects.py  widget_tweaks.py
core/settings/components/galleries/: photologue.py  starcross_gallery.py
core/settings/components/geo/: geolocation.py  ip_detection.py  maps.py
core/settings/components/internationalization/: modeltranslation.py  rosetta.py
core/settings/components/monitoring/: sentry.py
core/templatetags/: site_i18n.py
core/utils/: sql.py
static/project/css/: style.css
templates/account/: base.html  login.html  logout.html  signup.html
templates/admin/filer/: base_site.html
(+23 files in other folders)
